--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.scss
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.scss
@@ -184,7 +184,7 @@
             }
             &--dropdown {
                 z-index: 10;
-                background-color: white;
+                background-color: var(--bgColor);
                 // @include test-border;
                 box-sizing: border-box;
                 border: 1px solid rgb(128,128,128);
@@ -204,11 +204,16 @@
                         display: flex;
                         align-items: center;
                         font-size: 16px;
+                        transition: $ease-fx;
                         .fa-sun {
                             scale: 1.5;
+                            transition: $ease-fx;
+                            color: var(--defaultColor);
                         }
                         .fa-moon {
                             scale: 1.0;
+                            transition: $ease-fx;
+                            color: var(--defaultColor);
                         }
                         .switch {
                             display: block;
@@ -219,8 +224,9 @@
                             position: relative;
                             cursor: pointer;
                             border-radius: 10px;
-                            margin: 0 5px;
+                            margin: 0 10px;
                             filter: drop-shadow(0px 0px 2px rgb(0,0,0));
+                            transition: $ease-fx;
                             &__button {
                                 display: block;
                                 position: relative;
@@ -232,6 +238,7 @@
                                 height: 20px;
                                 border-radius: 50%;
                                 transition: var(--slow-fx);
+                                transition: $ease-fx;
                             }
                         }
                         .checked {
@@ -239,7 +246,7 @@
                             // filter: drop-shadow(0px 0px 3px rgb(255,255,255));
                             .switch__button {
                                 left: 20px;
-                                transition: var(--slow-fx);
+                                transition: $ease-fx;
                             }
                         }
                     }
