--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.scss
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.scss
@@ -119,6 +119,7 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                filter: drop-shadow(0px 0px 3px rgb(255,255,255));
             }
         }
         &__search {
@@ -333,7 +334,7 @@
         // border: 1px solid yellow;
         width: 1250px;
         height: 30px;
-        background-color: darkgoldenrod;
+        background: var(--gradBG);
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -626,6 +627,7 @@
             text-transform: uppercase;
             font-size: 24px;
             margin: 30px 0px 40px 20px;
+            color: var(--defaultColor);
         }
         &__container {
             @include df-center();
@@ -689,6 +691,7 @@
             text-transform: uppercase;
             font-size: 24px;
             margin: 30px 0px 0px 0px;
+            color: var(--defaultColor);
         }
         &__cards {
             border: 1px solid none;
@@ -733,6 +736,7 @@
             text-transform: uppercase;
             font-size: 24px;
             margin: 30px 0px 40px 20px;
+            color: var(--defaultColor);
         }
         &__container {
             @include df-center();
@@ -800,7 +804,7 @@
                 width: 100%;
                 height: 80px;
                 object-fit: cover;
-                filter: invert(1);
+                filter: invert(1) drop-shadow(0px 0px 3px rgb(0,0,0));
             }
             &--headers {
                 margin: 30px 0px 20px 10px;
